--- a/wangshuo/shop.html
+++ b/wangshuo/shop.html
@@ -38,6 +38,7 @@
         </aside>
     </div>
 <!--登录-->
+
 <!--猜您喜欢-->
 <div class="tuijian" id="tj">
    <h2>猜您喜欢</h2>
@@ -53,11 +54,30 @@
     </div>
 </div>
 <!--猜您喜欢-->
+<!--分享-->
+<div class="fx text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-3">
+                <img src="img/tb/qq.png" alt="">
+            </div>
+            <div class="col-xs-3">
+                <img src="img/tb/qkj.png" alt="">
+            </div>
+            <div class="col-xs-3">
+                <img src="img/tb/VX.png" alt="">
+            </div>
+            <div class="col-xs-3">
+                <img src="img/tb/pyq.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+<!--分享-->
 <!--回到顶部-->
     <div id="top"></div>
 <!--回到顶部-->
-
-  <script src="js/swiper-4.2.6.min.js"></script>
+   <script src="js/swiper-4.2.6.min.js"></script>
    <script src="js/jquery-1.11.1.min.js"></script>
    <script src="js/timeCountDown.js"></script>
    <script src="js/vue.js"></script>
