--- a/wangtianci/dengchao.html
+++ b/wangtianci/dengchao.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="bootstrap-3.3.4-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+<body style="overflow:-Scroll;overflow-x:hidden">
 <body class="fc text-center">
 <!--底部导航-->
 <div class="cotainer">
@@ -22,89 +23,115 @@
     </nav>
 <!--底部导航-->
 <!--header部分-->
-       <div class="container-filud">
-           <div class="bg clearfix">
-               <div class="left">
-                   <img src="img/yonghu/logo.png">
-                    <a href="" class="name1">登录 / 注册</a>
-               </div>
-                
-            </div>
-       </div>
-        
+<div class="container">
+    <div>
+        <i class="avatar"></i>
+        <p class="dz">登录 / 注册</p>
+    </div>
+    <div class="bg"></div>
+</div>
 <!--header部分-->
-    <div class="tab">
-        <div class="container">
-            <div class="order">
-                <a href="" class="dd" href="">我的订单</a>
-                <a href=""  class="txt clearfix">全部订单</a>
-                <i class="glyphicon glyphicon-chevron-right"></i>
+<!--banner-header部分-->
+<div class="order text-center">
+    <div class="container co1">
+        <div class="row">
+            <div class="col-xs-6">
+                <a href="#">我的订单</a>
             </div>
-            <div class="ip clearfix">
-               <div>
-                   <img src="img/fc-header/01.png" alt="" class="ii1"> 
-               </div>
-                   <a href="" class="aa1">待支付</a>
-               <div>
-                   <img src="img/fc-header/02png.png" alt="" class="ii2">
-               </div>
-                   <a href="" class="aa2">待收货</a>
-               <div>
-                   <img src="img/fc-header/03.png" alt="" class="ii3">
-               </div>
-                   <a href="" class="aa3">待评价</a>
-             </div>
+            <div class="col-xs-6">
+                <a href="#" class="tx">全部订单</b>
+                <i class="glyphicon glyphicon-menu-right"></i>
+            </div>
         </div>
     </div>
-    <div class="ban">
-       <div class="container">
-           <b class="img-icon"><img src="img/fc-header/001.png" alt="">收货地区</b>
-           <a href="" class="txt">河北<i class="glyphicon glyphicon-chevron-right"></i></a>
-       </div>
-       <div class="tai">
-           <div class="container">
-               <b class="img-icon"><img src="img/fc-header/002.png" alt="">我的优惠券</b>
-               <a href="" class="txt"><i class="glyphicon glyphicon-chevron-right"></i></a>
-           </div>
-           <div class="container">
-               <b class="img-icon"><img src="img/fc-header/003.png" alt="">我的花粉</b>
-               <a href="" class="txt"><i class="glyphicon glyphicon-chevron-right"></i></a>
-           </div>
-       </div>
-       <div class="taer">
-           <div class="container">
-               <b class="img-icon"><img src="img/fc-header/004.png" alt="">我的收藏</b>
-               <a href="" class="txt"><i class="glyphicon glyphicon-chevron-right"></i></a>
-           </div>
-           <div class="container">
-               <b class="img-icon"><img src="img/fc-header/005.png" alt="">浏览记录</b>
-               <a href="" class="txt"><i class="glyphicon glyphicon-chevron-right"></i></a>
-           </div>
-       </div>
-       <div class="taerr">
-           <div class="container">
-               <b class="img-icon"><img src="img/fc-header/006.png" alt="">意见反馈</b>
-               <a href="" class="txt"><i class="glyphicon glyphicon-chevron-right"></i></a>
-           </div>
-           <div class="container">
-               <b class="img-icon"><img src="img/fc-header/007.png" alt="">在线客服</b>
-               <a href="" class="txt"><i class="glyphicon glyphicon-chevron-right"></i></a>
-           </div>
-           <div class="container">
-               <b class="img-icon"><img src="img/fc-header/008.png" alt="">隐私政策</b>
-               <a href="" class="txt"><i class="glyphicon glyphicon-chevron-right"></i></a>
-           </div>
-           <div class="container">
-               <b class="img-icon"><img src="img/fc-header/009.png" alt="">关于乐峰</b>
-               <a href="" class="txt"><i class="glyphicon glyphicon-chevron-right"></i></a>
-           </div>
-       </div>
+    <div class="container order-tab">
+        <div class="row">
+            <div class="col-md-4 col-xs-3">
+                <div class="div1">
+                    <a href="">
+                        <img src="img/fc-header/01.png" alt="">
+                        <p>待支付</p>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-xs-3">
+                <div class="div2">
+                    <a href="">
+                        <img src="img/fc-header/02png.png" alt="">
+                        <p>待收货</p>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-xs-3">
+                <div class="div3">
+                    <a href="">
+                        <img src="img/fc-header/03.png" alt="">
+                        <p>待评价</p>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
-<!--footer部分-->
-<!--为你推荐部分-->
-<div class="oo">
-    <h1>为你推荐</h1>
 </div>
+<!--banner-header部分-->
+<!--main-header部分-->
+<div class="ldiv">
+    <div class="container">
+        <img src="img/fc-header/001.png" alt="">
+        <p>收货地区</p>
+        <a href="">河北</a>
+        <i class="glyphicon glyphicon-menu-right"></i>
+    </div>
+</div>
+<div class="ldiv1">
+    <div class="container">
+        <img src="img/fc-header/002.png" alt="">
+        <p>我的优惠券</p>
+        <i class="glyphicon glyphicon-menu-right"></i>
+    </div>
+    <div class="container ik">
+        <img src="img/fc-header/003.png" alt="">
+        <p>我的花粉</p>
+        <i class="glyphicon glyphicon-menu-right"></i>
+    </div>
+</div>
+<div class="ldiv2">
+    <div class="container">
+        <img src="img/fc-header/004.png" alt="">
+        <p>我的收藏</p>
+        <i class="glyphicon glyphicon-menu-right"></i>
+    </div>
+    <div class="container ik">
+        <img src="img/fc-header/005.png" alt="">
+        <p>浏览记录</p>
+        <i class="glyphicon glyphicon-menu-right"></i>
+    </div>
+</div>
+<div class="ldiv3">
+    <div class="container">
+        <img src="img/fc-header/005.png" alt="">
+        <p>意见反馈</p>
+        <i class="glyphicon glyphicon-menu-right"></i>
+    </div>
+    <div class="container ik">
+        <img src="img/fc-header/006.png" alt="">
+        <p>在线客服</p>
+        <i class="glyphicon glyphicon-menu-right"></i>
+    </div>
+    <div class="container ik">
+        <img src="img/fc-header/007.png" alt="">
+        <p>隐私政策</p>
+        <i class="glyphicon glyphicon-menu-right"></i>
+    </div>
+    <div class="container ik">
+        <img src="img/fc-header/008.png" alt="">
+        <p>关于乐峰</p>
+        <i class="glyphicon glyphicon-menu-right"></i>
+    </div>
+</div>
+<!--main-header部分-->
+
+<!--footer部分-->
 <!--为你推荐部分-->
 <div class="jingxuan" id="xj">
     <div class="container">
@@ -117,6 +144,7 @@
         </ul>
     </div>
 </div>
+<!--为你推荐部分-->
 <div class="footer fter">
     <div class="left">
         <a href="">首页</a>
